# STORM-Net

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt
.github/workflows/: main.yml
Assets/: Solids3.unity
Assets/ImageSynthesis/: ColorEncoding.cs  ImageSynthesis.cs
Assets/ImageSynthesis/Shaders/: UberReplacement.shader
Assets/Materials/: face_material.mat  helment_material.mat
Assets/Scripts/: SceneController.cs  SceneController2.cs  SceneController3.cs  ShapePool.cs
CapCalibrator/: .gitignore  MNI.py  MNI_torch.py  config.py  data_augmentations.py  data_generators.py  data_visualizer.py  draw.py  experiment_viewer.py  experimental.py  file_io.py  geometry.py  get_affine_transform.py  img_reader.py  main.py  main.spec  models.py  predict.py  predict_segnet.py  render.py  test_core.py  tf_file_io.py  torch_train.py  train.py  train_segnet.py  unitest.py  utils.py  video.py  video_annotator.py  visualize.py
CapCalibrator/resource/: dig2dig.mat  dig2vid.mat  ex_model_MNI_proj.npy  mni_projection_test.npz  vid2vid.mat
CapCalibrator/resource/MNI_templates/: DMNI0001.csv  DMNI0001.npy  DMNI0002.csv  DMNI0002.npy  DMNI0003.csv  DMNI0003.npy  DMNI0004.csv  DMNI0004.npy  DMNI0005.csv  DMNI0005.npy  DMNI0006.csv  DMNI0006.npy  DMNI0007.csv  DMNI0007.npy  DMNI0008.csv  DMNI0008.npy  DMNI0009.csv  DMNI0009.npy  DMNI0010.csv  DMNI0010.npy  DMNI0011.csv  DMNI0011.npy  DMNI0012.csv  DMNI0012.npy  DMNI0013.csv  DMNI0013.npy  DMNI0014.csv  DMNI0014.npy  DMNI0015.csv  DMNI0015.npy  DMNI0016.csv  DMNI0016.npy  DMNI0017.csv  DMNI0017.npy  DMNIHAve.csv  DMNIHAve.npy  origin_sample.csv  others_sample.csv  xallBEM.csv  xallHEM.csv  (+74 more)
CapCalibrator/torch_src/: MNI_torch.py  torch_data.py  torch_model.py  torch_train.py  torch_writer.py
DataSynth/: .gitignore  cmdline.txt  example_model.txt  example_model2_full.txt  render.py
DataSynth/Assets/: MainScene.unity  Solids3.unity  cap.mtl
DataSynth/Assets/Editor/: MeshInspector.cs  SensorInspector.cs
DataSynth/Assets/ImageSynthesis/: ImageSynthesis.cs
DataSynth/Assets/Materials/: helment_material.mat  sticker_material.mat
DataSynth/Assets/Materials/Materials/: baseFace_BaseColor_pub_1001.mat  cornea_BaseColor_pub_1001.mat  mouthTongue_BaseColor_pub_1001.mat
DataSynth/Assets/ProBuilder Data/: Default Material Palette.asset
DataSynth/Assets/Scripts/: CapMesh.cs  ColorEncoding.cs  Controller.cs  FixClothBounds.cs  Globals.cs  MeshStudy.cs  Painter.cs  SceneController.cs  SceneController3.cs  textUpdater.cs
DataSynth/Assets/cloth_scene/: LightingData.asset
DataSynth/Assets/meshes/: human_head_armature_orig.blend
DataSynth/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
DataSynth/UserSettings/: EditorUserSettings.asset
ProjectSettings/: EditorBuildSettings.asset  ProBuilderSettings.json  QualitySettings.asset  TagManager.asset
example_models/: adultTemplate.txt  babyTemplate.txt  example_model.txt  example_model2.txt  example_model3.txt  pc_for_display.txt
example_models/telaviv_experiment/: amir.txt  aviv.txt  ayu.txt  experiment_procedure  maya.txt  nitai.txt  ran.txt
example_models/telaviv_experiment/aviv/: aviv.txt
example_models/telaviv_experiment/daniel/: daniel.txt
example_models/telaviv_experiment/failed_measurements/: argaman.txt  daniel.txt
example_models/telaviv_experiment/failed_measurements/yaara/: yaara3.txt
example_models/telaviv_experiment/yaara/: yaara1.txt  yaara2.txt  yaara_raw_data.txt
raw_data/: experiment_procedure  new_magnetic_source_calib_raw.txt  new_magnetic_source_model.txt
stormnet_cpp/: CMakeLists.txt  arc_ball.cpp  arc_ball.h  blob_detector.cpp  blob_detector.h  config.h  convd2d.h  file_dialog.cpp  file_dialog.h  image_utils.cpp  image_utils.h  main.cpp  model_trainer.cpp  model_trainer.h  render_data.cpp  render_data.h  settings.cpp  settings.h  string_utils.cpp  string_utils.h  template.cpp  template.h  template_viewer.cpp  template_viewer.h  torch_data.cpp  torch_data.h  utils.cpp  utils.h  video_annotator.cpp  video_annotator.h
(+5 files in other folders)
